--- a/src/App.less
+++ b/src/App.less
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -35,4 +36,31 @@
   to {
     transform: rotate(360deg);
   }
+}
+html,body,#root{
+  width: 100%;
+  height: 100%;
+}
+.ant-layout{
+  height: 100%;
+}
+.logo {
+  width: 120px;
+  height: 31px;
+  color: #ffffff;
+  font-size: 18px;
+  /*background: rgba(255, 255, 255, 0.2);*/
+  /*margin: 16px 24px 16px 0;*/
+  float: left;
+}
+.trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.trigger:hover {
+  color: #1890ff;
 }
